[tool.poetry]
name = "ko"
version = "0.2.1"
description = "SDK for KGrid 2.0 Knowledge objects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
